- fix a bunch of issues w/ the landing page - prune dead css - still need to do css cleanup, shift content off-center, extract to   something reusable per-page

--- a/src/_includes/event-detail.scss
+++ b/src/_includes/event-detail.scss
@@ -35,10 +35,10 @@
 
     &:hover {
       background-color: $blue0;
-      animation: Shake 0.3s linear infinite;
+      animation: TicketsShake 0.3s linear infinite;
     }
 
-    @keyframes Shake {
+    @keyframes TicketsShake {
       0% {
         transform: translateX(+0px);
       }
